Fix large spacing between cases header and cases

--- a/src/scss/components/_cases.scss
+++ b/src/scss/components/_cases.scss
@@ -1,7 +1,11 @@
+#cases h2 {
+	margin-bottom: -1em;
+}
+
 .case {
 	@media screen and (max-width: 480px) {
 		padding-top: 2em;
-		
+
 		img {
 			display: block;
 			width: 75%;
